2004-06-14  Jakub Jelinek  <jakub@redhat.com>

	[BZ #219]
	* nss/nsswitch.c (free_mem): Don't try to close a library handle
	if the handle is invalid.  Patch by David Kimdon <kimdon@esrf.fr>.

2004-06-11  Dmitry V. Levin  <ldv@altlinux.org>

	[BZ #217]
	* debug/xtrace.sh: Fix typo in error diagnostics.

2004-06-14  Andreas Schwab  <schwab@suse.de>

	* stdio-common/psignal.c (psignal): Don't use BUF when asprintf
	failed.

2004-06-15  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/getcontext.S: Fix pasto
	that clobbers r19.  Fix pasto that overflowed sigcontext.v_reserve.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/setcontext.S: Fix pasto
	that clobbers r19.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/swapcontext.S: Fix pasto
	that clobbers r19.  Fix pasto that overflowed sigcontext.v_reserve.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/getcontext.S:
	Fix setting of sigcontext.v_regs.  Fix pasto that clobbers r19.
	Fix pasto that overflowed sigcontext.v_reserve.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/setcontext.S:
	Fix pasto that clobbers r19.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/swapcontext.S: Fix setting
	of sigcontext.v_regs.  Fix pasto that clobbers r19.  Fix pasto that
	overflowed sigcontext.v_reserve.

2004-05-04  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #150]
	* sysdeps/generic/strtol_l.c (DEF): Use ".gnu.linkonce.r."
	instead of ".gnu.linkonce.ro." as the prefix for linkonce
	read-only section name.

2004-06-14  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/div_libc.h (_ITOFS): Use "sp" not "$sp".
	(_ITOFT, _FTOIT, _ITOFT2): Likewise.

2004-06-08  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/s390/s390-32/backtrace.c (init): Guard with #ifdef SHARED.
	(unwind_backtrace, unwind_getip): Define #ifndef SHARED.
	(__backtrace): Don't call init #ifndef SHARED.
	* sysdeps/s390/s390-64/backtrace.c (init): Guard with #ifdef SHARED.
	(unwind_backtrace, unwind_getip): Define #ifndef SHARED.